[package]
name = "nodepack"
version = "0.0.1"
authors = ["zensh <admin@zensh.com>"]
description = "Compile Node.js application to a single executable."
documentation = "https://github.com/zensh/nodepack"
homepage = "https://github.com/zensh/nodepack"
repository = "https://github.com/zensh/nodepack.git"
readme = "README.md"
keywords = ["node.js", "pack", "executable"]
license = "MIT/Apache-2.0"

[dependencies]

[dependencies.clap]
version = "^2.5.1"
default-features = false
features = ["color"]
